Fix IsArcWindow() to check an application id of a window.

ARC windows were the only one kind of clients, but it changed.
We have to check an application id to distinguish ARC windows and
other exo windows.

Bug: 829383
Test: Manual. Confirm that input is still working on Linux apps after
      opening Android apps with a text input.

Change-Id: Ib58a6e5b41cdd2a3c68d76b3baacd93f11602f70
Reviewed-on: https://chromium-review.googlesource.com/1001086
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549183}
Former-commit-id: 82b897f9b746cac54251b077874b60c596a07f87