components/arc/ime/arc_ime_service_unittest.cc
@@ -114,6 +114,10 @@ class FakeArcWindowDelegate : public ArcImeService::ArcWindowDelegate {
   explicit FakeArcWindowDelegate(ui::InputMethod* input_method)
       : next_id_(0), test_input_method_(input_method) {}
 
+  bool IsExoWindow(const aura::Window* window) const override {
+    return IsArcWindow(window);
+  }
+
   bool IsArcWindow(const aura::Window* window) const override {
     return arc_window_id_.count(window->id());
   }
